# BreakOutTEC

./: .gitignore  VentanaInicio.c
gtk_proyect/: CMakeLists.txt  main.c  simple_window
src/: LinkedList.java  Makefile
src/C/: LEER.txt  Makefile  file.c  game.c  test.c
src/C/modules/: socket.c  socket.h
src/C/modules/network/: socket.c  socket.h
src/java/: LEER.txt
src/java/Breakout/: pom.xml
src/java/Breakout/src/main/java/breakout/app/: Interface.java  Main.java  Program.java  Tests.java
src/java/Breakout/src/main/java/breakout/app/Controller/: AdministratorController.java  SessionController.java
src/java/Breakout/src/main/java/breakout/app/GameObjects/: AddBall.java  AddLife.java  AdditionalBalls.java  Ball.java  Brick.java  GameObject.java  PowerUp.java  Property.java  Racket.java  SizeIncrease.java  SpeedIncrease.java
src/java/Breakout/src/main/java/breakout/app/Model/: Administrator.java  GameSession.java
src/java/Breakout/src/main/java/breakout/app/Structures/: CircularList.java  LinkedList.java  Node.java  Pair.java  Triplet.java
src/java/Breakout/src/main/java/breakout/app/View/: ClientWindow.java  DedicatedWindow.java  HomeWindow.java  MainWindow.java  SecondWindow.java
src/java/Breakout/src/main/java/breakout/app/modules/: Server.java
src/java/Breakout/src/test/java/breakout/app/: AppTest.java
src/java/breakout-server/: pom.xml
src/java/breakout-server/src/main/java/breakout/App/: App.java  MainWindow.java  SecondWindow.java
src/java/breakout-server/src/test/java/breakout/App/: AppTest.java
(+21 files in other folders)
